# MedAgentAudit

./: .gitignore  LICENSE  README.md  code2prompt.py  pyproject.toml
datasets/raw/: preprocess_datasets.py
figure/visaulize_codes_figures/: generate_overall_statistics.py  mechanism_1_analyze_failure.py  mechanism_2_analyze_failure.py  mechanism_3_analyze_failure.py  mechanism_4_analyze_failure.py
medagentaudit/annotator/: open_coding_annotation.py
medagentaudit/auditor/: auditor_agent.py
medagentaudit/common/: agent_type.py  medical_specialty.py
medagentaudit/core/: base_agent.py
medagentaudit/framework/: colacare.py  healthcareagent.py  mac.py  mdagents.py  medagent.py  medagents.py  reconcile.py  single_llm.py
medagentaudit/medqa/: multi_agent_colacare.py  multi_agent_colacare_audit.py  multi_agent_colacare_full_log_add_mechanism.py  multi_agent_healthcareagent_audit.py  (+14 more)
platform/: .gitignore  README.md  index.html  package-lock.json  package.json
scripts/: audit_drawing.py  audit_stas.py  audit_statistics.py  calculate_human_eval_metrics.py  calculate_single_llm_and_mas_acc.py  case_study_filter.py  extract_logs_for_audit.py  extract_logs_for_audit_human_eval.py  extract_logs_for_audit_human_evl.py  extract_logs_for_open_coding.py  gen_audit_human_eval_cases.py  gen_eval_cases_guideline.md  gen_opencoding_human_eval_cases.py  generate_taxonomy_statistics.py  preprocess_datasets.py  run.sh  run_audit.sh  run_audit_glm.sh  run_mas_collaboration.sh  run_multi_agents_system.sh  run_open_coding.py  run_open_coding.sh  run_single_llm.sh
utils/: config.py
(+85 files in other folders)
