[project]
name = "2025NM_MedagentAudit_code"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "loguru>=0.7.3",
    "matplotlib>=3.10.6",
    "openai>=1.69.0",
    "pandas>=2.2.3",
    "python-dotenv>=1.1.0",
    "seaborn>=0.13.2",
    "tabulate>=0.9.0",
    "tenacity>=9.1.2",
    "toml>=0.10.2",
    "tqdm>=4.67.1",
]
